# festival_tts_ros

./: CMakeLists.txt  package.xml
src/: festival_tts_ros.cpp
