<?xml version="1.0"?>
<package>
  <name>festival_tts_ros</name>
  <version>0.1.0</version>
  <description>Festival Text-to-Speech interface for ROS</description>

  <maintainer email="atsushi.w@atr.jp">Atsushi Watanabe</maintainer>
  <license>BSD</license>
  <author email="atsushi.w@atr.jp">Atsushi Watanabe</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
